--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
 
             <div data-date="2015-16 to 2018-19">
-                <h3>Smt.Sharadchandrika Suresh Patil Institute Of Technology(polytechnique),Chopda</h3>
+                <h3>Smt.Sharadchandrika Suresh Patil Institute Of Technology(polytechnic),Chopda</h3>
                 <h4>Diploma</h4>
 
             </div>
