--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <p>
                         <h1>
                             Hello!<br>
-                            I am miss.Akshata Badgujar<br>
+                            I am Miss. Akshata Badgujar<br>
                             Freshers
                         </h1>
 
@@ -286,7 +286,7 @@
                         <h3>
                            Curricular Projects
                             <br><hr>
-                            1.LATENCY ANALYZER(minor Project)<br />
+                            1.Latency Analyzer(Minor Project)<br />
                             2.Car Rendering(Polytechnic project)
                         </h3>
 
