--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <h2 class="heading">EDUCATION</h2>
         <div id="experience-timeline">
             <div data-date=" 2018-19 to  2021-22">
-                <h3>Shram Sadhana Bombay Trust's COLLEGE of ENGINEERING & TECHNOLOGY Bambhori, Jalgaon,</h3>
+                <h3>Shram Sadhana Bombay Trust's COLLEGE of ENGINEERING & TECHNOLOGY Bambhori, Jalgaon.</h3>
                 <h4>BE in Information Technology Engineering</h4>
 
             </div>
@@ -287,7 +287,8 @@
                            Curricular Projects
                             <br><hr>
                             1.Latency Analyzer(Minor Project)<br />
-                            2.Car Rendering(Polytechnic project)
+                            2.Car Rental(Polytechnic project)
+			    3.Traffic Sign detection using AI(Final Year Project Working)	
                         </h3>
 
                         <!--<a href="https://akshata.github.io/MINIPROJECT/">View Project</a>-->
@@ -311,8 +312,9 @@
                             Extra Curricular Project Activities
                             <br><hr>
                             • Website development using AI technology.<br>
-                            • Python based minor Projects .<br >
-                            • Currently Pursuing IOT Technology Course<br>
+                            • Augmented Reality.<br >
+                            • R Lang minor Project.<br>
+		            • PHP Based Website Development.<br>		
                         </h3>
 
 
@@ -339,7 +341,7 @@
             <li>C</li>
             <li>C++</li>
             <li>AI Basic</li>
-            <li>IOT Beginner</li>
+            <li>Augmented Reality</li>
 
         </ul>
     </div>
