--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                         <h3>
                            Curricular Projects
                             <br><hr>
-                            1.Latency Analyzer(Minor Project)<br />
-                            2.Car Rental(Polytechnic project)
-			    3.Traffic Sign detection using AI(Final Year Project Working)	
+                            1.Latency Analyzer(Minor Project)<br /><br>
+				2.Car Rental(Polytechnic project)</br><br>
+			    3.Traffic Sign detection using AI(Final Year Project Working)</br>	
                         </h3>
 
                         <!--<a href="https://akshata.github.io/MINIPROJECT/">View Project</a>-->
