--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                         <h3>
                            Curricular Projects
                             <br><hr>
-                            1.Latency Analyzer(Minor Project)<br /><br>
-				2.Car Rental(Polytechnic project)</br><br>
+                            1.Latency Analyzer(Minor Project)<br>
+				2.Car Rental(Polytechnic project)<br>
 			    3.Traffic Sign detection using AI(Final Year Project Working)</br>	
                         </h3>
 
