--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
         <h2 class="heading">Skills</h2>
         <ul>
 
-            <li>Python(basic)</li>
+            <li>MYSQL</li>
             <li>Ms office</li>
             <li>HTML</li>
             <li>Data structure</li>
             <li>Basic Java</li>
             <li>C</li>
             <li>C++</li>
-            <li>AI Basic</li>
+            <li>AI Website Development</li>
             <li>Augmented Reality</li>
 
         </ul>
