--- a/index.html
+++ b/index.html
@@ -234,12 +234,10 @@
                         <h1>
                             Hello!<br>
                             I am Miss. Akshata Badgujar<br>
-                            Freshers
+                            Associate Engineer @Nagarro
                         </h1>
 
-                        "To work for an organization which provides me the opportunity
-                        to improve my skills and knowledge
-                        to growth along with the organization objective".&nbsp;
+                        "Dotnet Developer".&nbsp;
 
                     </p>
                 </div>
@@ -335,14 +333,17 @@
 
             <li>MYSQL</li>
             <li>Ms office</li>
-            <li>HTML</li>
+            <li>HTML & CSS</li>
             <li>Data structure</li>
             <li>Basic Java</li>
             <li>C</li>
             <li>C++</li>
             <li>AI Website Development</li>
             <li>Augmented Reality</li>
-
+       	 <li>C#</li>
+	   <li>MVC</li>
+		 <li>Design Pattern</li>
+ <li>Angular</li>
         </ul>
     </div>
     <!-- End #skills -->
