--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             <br><hr>
                             1.Latency Analyzer(Minor Project)<br>
 				2.Car Rental(Polytechnic project)<br>
-			    3.Traffic Sign detection using AI(Final Year Project Working)</br>	
+			    3.Traffic Sign detection using AI(Final Year Project )</br>	
                         </h3>
 
                         <!--<a href="https://akshata.github.io/MINIPROJECT/">View Project</a>-->
