--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>
-                           Curricular Projects
+                           Training Projects
                             <br><hr>
                             1.Book Reading Event Management(MVC).<br>
 				2.Student Result management (Angular).<br>
