--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
             <h1>Miss.Akshata Badgujar</h1>
             <h2>Information Technology Engineer</h2>
-            <a href="resume-akshata Badgujar(2).pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Akshta Badagujar Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
