--- a/index.html
+++ b/index.html
@@ -340,10 +340,11 @@
             <li>C++</li>
             <li>AI Website Development</li>
             <li>Augmented Reality</li>
-       	 <li>C#</li>
+            <li>Node JS</li>
+       	    <li>C#</li>
 	   <li>MVC</li>
-		 <li>Design Pattern</li>
- <li>Angular</li>
+           <li>Design Pattern</li>
+           <li>Angular</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -422,9 +423,10 @@
                            Training Projects
                             <br><hr>
                             1.Book Reading Event Management(MVC).<br>
-				2.Student Result management (Angular).<br>
+		            2.Student Result management (Angular).<br>
 			    3.Reimbursement Portal(Final Project).</br>
-			    4. Book Reading Event Management(Changes with Design Pattern).</br>
+			    4. Book Reading Event Management( Design Pattern).</br>
+			    5. Blog Application (React JS).</br>
                         </h3>
 
                         <!--<a href="https://akshata.github.io/MINIPROJECT/">View Project</a>-->
@@ -433,9 +435,9 @@
                 </div>
                 <!-- End .project -->
 
-
+           </div>
             </div>
-		
+		</div>
 		
 		
 		
