--- a/index.html
+++ b/index.html
@@ -233,11 +233,14 @@
                     <p>
                         <h1>
                             Hello!<br>
-                            I am Miss. Akshata Badgujar<br>
-                            Associate Engineer @Nagarro
+                           As a dedicated and motivated individual, I strive to excel in an environment of growth and excellence. I
+                             am seeking a job that provides both job satisfaction and self-development opportunities while allowing
+                             me to contribute to personal and organizational goals. With a strong ability to quickly learn new
+                             software and technologies, I can effectively translate business requirements into technical solutions. I
+                             am a team player who consistently provides valuable support. Currently looking to embark on a career
+                             as an entrylevel software engineer with a reputable technology-driven firm.
                         </h1>
 
-                        "Dotnet Developer".&nbsp;
 
                     </p>
                 </div>
