--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
                     <p>
                         <h1>
                             Hello!<br>
-                           As a dedicated and motivated individual, I strive to excel in an environment of growth and excellence. I
-                             am seeking a job that provides both job satisfaction and self-development opportunities while allowing
-                             me to contribute to personal and organizational goals. With a strong ability to quickly learn new
-                             software and technologies, I can effectively translate business requirements into technical solutions. I
-                             am a team player who consistently provides valuable support. Currently looking to embark on a career
-                             as an entrylevel software engineer with a reputable technology-driven firm.
+				As a dedicated and motivated individual, I strive to excel in an environment of growth and excellence. 
+                                I am seeking a job that provides both job satisfaction and self-development opportunities while allowing me
+                                to contribute to personal and organizational goals. With a strong ability to quickly learn
+                                new software and technologies, I can effectively translate business requirements into technical solutions.
+                               I am a team player who consistently provides valuable support.
+				
                         </h1>
 
 
