--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
                 <div class="col-md-8">
                     <p>
                         <h1>
-                            Hello!<br>
+                            Hello!<br></h1>
 				As a dedicated and motivated individual, I strive to excel in an environment of growth and excellence. 
                                 I am seeking a job that provides both job satisfaction and self-development opportunities while allowing me
                                 to contribute to personal and organizational goals. With a strong ability to quickly learn
                                 new software and technologies, I can effectively translate business requirements into technical solutions.
                                I am a team player who consistently provides valuable support.
 				
-                        </h1>
+                      
 
 
                     </p>
